# src/main/api/api.yaml
@@ -535,6 +535,25 @@ paths:
                 $ref: "#/components/schemas/ScheduledGrammarExercises"
         '401':
           description: Unauthorized
+  /schedule/exercises/{exerciseId}:
+    parameters:
+      - $ref: '#/components/parameters/exerciseIdPathParam'
+    get:
+      tags:
+        - Schedule
+      summary: "Get scheduled exercise"
+      operationId: getScheduledExercise
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ScheduledGrammarExercise"
+        '401':
+          description: Unauthorized
+        '404':
+          description: Not found
   /schedule/{deckId}/cards:
     parameters:
       - $ref: '#/components/parameters/deckIdPathParam'
@@ -801,10 +820,12 @@ components:
         - PAST_SIMPLE_POSITIVE
         - PAST_SIMPLE_NEGATIVE
         - PAST_SIMPLE_QUESTIONS
+        - PRESENT_SIMPLE_QUESTIONS
     Grammar:
       type: string
       enum:
         - PAST_SIMPLE
+        - PRESENT_SIMPLE
     CorrectAnswers:
       type: array
       description: "Defines all possible correct answers. Answer has to be the same as one of the defined values to be considered correct"
@@ -1385,6 +1406,8 @@ components:
     SharedDeck:
       type: object
       properties:
+        id:
+          $ref: '#/components/schemas/SharedDeckId'
         ownerUsername:
           $ref: '#/components/schemas/SharedDeckOwnerUsername'
         sharedAt:
@@ -1508,6 +1531,20 @@ components:
         - GOOD
         - EASY
         - SUSPEND
+    ScheduledGrammarExercise:
+      type: object
+      properties:
+        instruction:
+          $ref: '#/components/schemas/ScheduledGrammarExerciseInstruction'
+        imgUrl:
+          $ref: '#/components/schemas/MediaResourceUrl'
+        audioUrl:
+          $ref: '#/components/schemas/MediaResourceUrl'
+        body:
+          $ref: '#/components/schemas/GrammarExerciseBody'
+    ScheduledGrammarExerciseInstruction:
+      type: string
+      description: "Instruction in language preferred by user, if not available then default one is used"
 
   parameters:
     exerciseIdPathParam:
