# src/main/java/io/github/mateusz00/entity/SharedDeck.java
@@ -1,6 +1,10 @@
 package io.github.mateusz00.entity;
 
+import java.time.Instant;
+import java.util.List;
+
 import org.springframework.data.annotation.Id;
+import org.springframework.data.mongodb.core.index.Indexed;
 import org.springframework.data.mongodb.core.mapping.Document;
 
 import lombok.AllArgsConstructor;
@@ -13,14 +17,20 @@ import lombok.NoArgsConstructor;
 @Builder
 @NoArgsConstructor
 @AllArgsConstructor
-public class Deck
+public class SharedDeck
 {
     @Id
     private String id;
-    private String sharedDeckId;
+    private String ownerUserId;
+    private String ownerUsername;
+    private Instant sharedAt;
     private String name;
-    private String userId;
+    @Indexed
     private String language;
-    private CustomDeckSettings customSettings;
-    private DeckSettings effectiveSettings;
+    @Indexed
+    private List<String> tags;
+    private String description;
+    private int cardCount;
+    @Indexed
+    private int popularity;
 }
